<resources>
    <string name="app_name">GameBacklog</string>
    <string name="action_settings">Settings</string>
    <string name="title">title</string>
    <string name="hello">hello</string>
    <string name="platform">platform</string>
    <string name="date">date</string>
    <string name="status">status</string>
    <string name="tv_label_status_spinner">Status</string>
    <string name="ti_title">Title</string>
    <string name="ti_platform">Platform</string>
    <string name="snackbar_undo">UNDO</string>
    <string name="snackbar_text_one_item_deleted">1 game deleted</string>
    <string name="snackbar_text_all_items_deleted">Deleted all games</string>
    <string-array name="game_status">
        <item>Want to play</item>
        <item>Playing</item>
        <item>Stalled</item>
        <item>Dropped</item>
    </string-array>
</resources>
